# GitHubPuller

./: .gitignore  LICENSE  Makefile  README.md  github-puller.desktop  github-puller.metainfo.xml  install.sh  io.github.alihaydarsucu.GitHubPuller.desktop  io.github.alihaydarsucu.GitHubPuller.json  io.github.alihaydarsucu.GitHubPuller.metainfo.xml  pyproject.toml  setup.py
src/: app.py  config.py  github_api.py  main_window.py  repo_item.py
